--- a/public/less/sa-600.less
+++ b/public/less/sa-600.less
@@ -33,6 +33,7 @@
 				transition: transform 0.2s;
 				transform: scale(.5);
 				z-index: 43;
+				position: relative;
 				&:hover {
 					transform: scale(.8);
 					z-index: 44;
