--- a/public/less/sa-default.less
+++ b/public/less/sa-default.less
@@ -880,7 +880,7 @@
 }
 
 // Special cases for single policy pages
-.advo-target-thumbnail-link {
+.advo-target-thumbnail-link, .tiny-policymap-container {
 	float: left;
 	margin: 0 22px 12px 0;
 	margin: 0 1.5833357rem 0.857142857rem 0;
